k8s/overlays/production/backend-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  externalName: garbo.garbo.svc.cluster.local
